# qs-management

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  main.py  pyproject.toml  requirement.txt  requirements-dev.txt
.github/workflows/: ci.yml
database/: Project_db_Schema.txt
fake_data/: QS_Project_Backup.db  add_more_fake_data.py  budget_analysis.xlsx  fake_bq_data.xlsx  generate_fake_bq_data.py  generate_fake_data.py  populate_fake_data.py
function/: Abortive_manager.py  BQ_manager.py  Budget_manager.py  Contra_Charge_manager.py  DB_manager.py  Doc_manager.py  Excel_manager.py  MC_VO_manager.py  Payment_Application_manager.py  SC_VO_manager.py  Subcontract_Payment_manager.py  Subcontract_manager.py
migrations/: 20260104_update_ip_item.sql  QS_Project_Old.db
tests/: run_manual_tests.py  test_budget_manager.py  test_cashflow.py
tools/: check_db.py  check_sc_payments.py  check_tables.py  debug_db.py  import_test_ui_bqmanager.py  simple_test.py  test_subcontract_payment_ui.py  test_table.py
ui/: Abortive_Manager.ui  BQ_Manager.ui  Budget_Manager.ui  Doc_Manager.ui  MC_VOManager.ui  Main.ui  Payment_Manager.ui  SC_ContraChargeManager.ui  SC_VO_Manager.ui  Subcontract_Manager.ui  Subcontract_Payment_Manager.ui  Ui_AbortiveManager.py  Ui_BQManager.py  Ui_BudgetManager.py  Ui_DocManager.py  Ui_Doc_Manager.py  Ui_MC_VOManager.py  Ui_PaymentManager.py  Ui_SC_ContraChargeManager.py  Ui_SC_VOManager.py  Ui_SubcontractManager.py  Ui_SubcontractPaymentManager.py
